fixed file content runs out of view box; added file content view scroll

--- a/src/app/file-details-view/file-content/file-content.css
+++ b/src/app/file-details-view/file-content/file-content.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows:1fr 19fr;
   box-sizing: border-box;
+  height: 100%;
 }
 
 .FileDetailsContentViewTabs {
@@ -15,6 +16,9 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+}
+.FileContentScrollBox {
+  overflow: auto;
 }
 
 .containsRow[rowPosition="equal"] {
